--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "serve": "json-server --watch ./src/db/index.js --routes ./src/server/routes.json --port 3001",
+    "save-json-api": "node ./src/scripts/save-json-api.js",
+    "build": "react-scripts build && npm run save-json-api",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server": "^0.17.4",
+    "node-fs": "^0.1.7"
   }
 }
