--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gh-pages-demo",
   "version": "0.1.0",
+  "homepage": "https://nikumikun.github.io/gh-pages-demo",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,6 +22,8 @@
     "serve": "json-server --watch ./src/db/index.js --routes ./src/server/routes.json --port 3001",
     "save-json-api": "node ./src/scripts/save-json-api.js",
     "build": "react-scripts build && npm run save-json-api",
+    "predeploy": "rm -rf build && npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "json-server": "^0.17.4",
     "node-fs": "^0.1.7"
   }
