--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gh-pages-demo",
   "version": "0.1.0",
-  "homepage": "https://nikumikun.github.io/gh-pages-demo",
+  "homepage": "https://nikumikun.github.io/gh-pages-demo/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
